clusters/cl01tl/manifests/homepage/Deployment-homepage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homepage
    helm.sh/chart: homepage-5.2.1
  namespace: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: homepage
      app.kubernetes.io/instance: homepage
  template:
    metadata:
      annotations:
        checksum/configMaps: 5fe8afe842dfe706e1638f7c80dd3c0f7d7b7e408d2f0b6e94f87d05c57ef055
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: homepage
        app.kubernetes.io/name: homepage
    spec:
      enableServiceLinks: false
      serviceAccountName: homepage
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: HOMEPAGE_ALLOWED_HOSTS
              value: home.alexlebens.dev,homepage.homepage,homepage.homepage:80,homepage.homepage.svc.cluster.local
          image: ghcr.io/gethomepage/homepage:v2.4.0@sha256:643bd0be730d40f69d58028a55d1a896739333e8815786df42bc97f109ecbe61
          name: main
          resources:
            requests:
              cpu: 50m
              memory: 150Mi
          volumeMounts:
            - mountPath: /app/config/custom.css
              mountPropagation: None
              name: config
              readOnly: true
              subPath: custom.css
            - mountPath: /app/config/docker.yaml
              mountPropagation: None
              name: config
              readOnly: true
              subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              mountPropagation: None
              name: config
              readOnly: true
              subPath: kubernetes.yaml
            - mountPath: /app/config/settings.yaml
              mountPropagation: None
              name: config
              readOnly: true
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              mountPropagation: None
              name: config
              readOnly: true
              subPath: widgets.yaml
            - mountPath: /app/config/services.yaml
              mountPropagation: None
              name: config
              readOnly: true
              subPath: services.yaml
            - mountPath: /app/config/bookmarks.yaml
              mountPropagation: None
              name: config
              readOnly: true
              subPath: bookmarks.yaml
      volumes:
        - configMap:
            name: homepage
          name: config
