clusters/cl01tl/manifests/homepage/Service-gitea-ps10rp.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ps10rp
  namespace: homepage
  labels:
    app.kubernetes.io/name: gitea-ps10rp
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/part-of: homepage
  annotations:
    tailscale.com/tailnet-fqdn: gitea-ps10rp.boreal-beaufort.ts.net
spec:
  externalName: placeholder
  type: ExternalName
