clusters/cl01tl/manifests/homepage/HTTPRoute-homepage.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  labels:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homepage
    helm.sh/chart: homepage-5.2.1
  namespace: homepage
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "home.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homepage
          namespace: homepage
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
