clusters/cl01tl/manifests/homepage/HTTPRoute-http-route-homepage.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: http-route-homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/part-of: homepage
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - home.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: homepage
          port: 80
          weight: 100
